--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,25 +23,16 @@ canvas {
 html,
 body {
   margin: 0;
+  overflow-x: hidden;
   padding: 0;
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
+::selection {
+  color: $black;
+  mix-blend-mode: difference;
+}
 
-/* #download-button:before {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  z-index: -1;
-  background: linear-gradient(90deg, #03a9f4, #f441a5, #ffeb3b, #03a9f4);
-  background-size: 400%;
-  border-radius: 35px;
-  transition: 1s;
-} */
-
-/* #download-button:hover::before {
-  filter: blur(20px);
-} */
+.isolate {
+  width: 100vw; /* Set the width to 100% of the viewport width */
+}
